ajoutt des urls de ribbon

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -11,3 +11,6 @@
 
 
 mes-configs.limitDeProduits= 3
+
+#Ribbon
+microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9002,localhost:9003
